completed DeleteRequestController